--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "triggmine-js-sdk",
   "description": "TriggMine is an automated email marketing platform, tailored to the eCommerce needs.",
-  "main": "./dist/triggmine.min.js",
+  "main": "./dist/triggmine.js",
   "authors": [
     "TriggMine"
   ],
